<resources>
    <string name="app_name">Student Square App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout_button">Log out</string>
    <string name="register">Register</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_first_name">Enter first name</string>
    <string name="action_sign_up">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="account_create">Don\'t have an account yet? Create one!</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="title_activity_navigation">Announcement Desk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_title_name">Enter title name</string>
    <string name="created_at">Created at:</string>
    <string name="enter_description">Enter description</string>
    <string name="create_btn">CREATE</string>
    <string name="attachments_label">Attachments:</string>
    <string name="points_label">Points:</string>
    <string name="accept">ACCEPT</string>
    <string name="bet">BET</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="announcements">Announcements</string>
    <string name="requests">Requests</string>
    <string name="capture">Capture</string>
    <string name="attachments">Attachments: </string>

    <string-array name="types">
        <item>Announcement</item>
        <item>Help request</item>
    </string-array>


</resources>
